[gd_scene load_steps=8 format=3 uid="uid://mku3x1o1sce"]

[ext_resource type="Script" uid="uid://bo5wwmeh4rpt4" path="res://main.gd" id="1_glv2v"]
[ext_resource type="PackedScene" uid="uid://uhsrlmdmgi1f" path="res://planet.tscn" id="2_uu6xs"]
[ext_resource type="PackedScene" uid="uid://dofoaiffkao7b" path="res://planetwhite_stable.tscn" id="3_3dxm6"]
[ext_resource type="Script" uid="uid://c6lhpsbkl0f4k" path="res://camera_2d.gd" id="3_r0du0"]
[ext_resource type="Script" uid="uid://cwufalubmvw1f" path="res://control.gd" id="4_cm0pq"]
[ext_resource type="Shader" uid="uid://c4jrgct8f544w" path="res://Main.gdshader" id="5_fos0i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3dxm6"]
shader = ExtResource("5_fos0i")

[node name="Main" type="Node2D"]
script = ExtResource("1_glv2v")
body_scene = ExtResource("2_uu6xs")
planet_stable_scene = ExtResource("3_3dxm6")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("3_r0du0")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Line2D" type="Line2D" parent="."]

[node name="Background" type="CanvasLayer" parent="."]

[node name="Parallax2D" type="Parallax2D" parent="Background"]

[node name="ColorRect" type="ColorRect" parent="Background/Parallax2D"]
material = SubResource("ShaderMaterial_3dxm6")
offset_left = -34.0
offset_top = -21.0
offset_right = 1159.0
offset_bottom = 659.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_cm0pq")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control/VBoxContainer"]
layout_mode = 2

[node name="PauseButton" type="Button" parent="UI/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Pause"

[node name="PlayButton" type="Button" parent="UI/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Play"

[node name="MassSlider" type="HSlider" parent="UI/Control/VBoxContainer"]
layout_mode = 2
min_value = 10.0
max_value = 1e+07
step = 500.0
value = 10.0

[node name="MassLabel" type="Label" parent="UI/Control/VBoxContainer"]
layout_mode = 2
text = "Mass: 100000"

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/Control/VBoxContainer"]
layout_mode = 2

[node name="Speed1x" type="Button" parent="UI/Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "1x"

[node name="Speed2x" type="Button" parent="UI/Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "2x"

[node name="Speed05x" type="Button" parent="UI/Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "0.5x"

[node name="Speed50x" type="Button" parent="UI/Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "50x"

[node name="HBoxContainer3" type="HBoxContainer" parent="UI/Control/VBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="UI/Control/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "zero velocity"
